grammar.txt
Grammar
=======

input -> stmt_list

stmt_list -> stmt stmt_list'

stmt_list' -> ; stmt ; stmt_list'
	     | e

stmt -> assign
        | PRINT expr
        | fun_decl

assign -> IDENT = expr

fun_decl -> IDENT ( arg ) = expr

arg -> NUMBER
      | IDENT

expr -> term expr'

expr' -> + term expr'
	| e

term -> factor term'

term' -> * factor term'
	| e

factor -> IDENT
        | NUMBER
        | ( expr )
